--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "4.0.0",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "3.6.0",
+    "redux-form": "7.0.4",
     "redux-thunk": "2.1.0"
   },
   "devDependencies": {
